--- a/Assets/Translations/English.txt
+++ b/Assets/Translations/English.txt
@@ -26,8 +26,8 @@ Increased amount when strengthened;
 Occupied the enemy base.;
 The base is under attack.;
 The base's defence power is less than half.;
-The base is on the verge of destruction;
-The agent is under attack. Avoid;
+The base is on the verge of destruction.;
+The agent is under attack.;
 The agent is dead.;
 The aircraft is under attack.;
 Occupied all bases of land force.;
