--- a/Assets/Translations/English.txt
+++ b/Assets/Translations/English.txt
@@ -32,3 +32,5 @@ The agent is dead.;
 The aircraft is under attack.;
 Occupied all bases of land force.;
 Occupied all bases of ocean force.;
+Do not pit a small government against a large government;
+Grey people like you are not welcome to anyone;
